runtime/pavex_macros/tests/from_request/fail/missing_source.rs
use pavex_macros::FromRequest;

#[derive(FromRequest)]
pub struct MyStruct {
    a: u64,
}

fn main() {}
